[workspace]
members = [
    "publish",
    "subscribe",
    "stream",
    "log-parser"
]

default-members = [
    "publish"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tim Pickard"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenv = "0.15"
requestty = "0.5"
clap = { version = "4.0", features = ["derive", "env"] }
lapin = { version = "2.1", features = ["rustls"] }
rabbitmq-stream-client = { version = "0.1" }
tokio = { version = "1.21", features = ["full"] }
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
futures = "0.3"
joinery = "3.1"
