[package]
name = "publish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
requestty = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]

[dev-dependencies]
